@@ -276,6 +276,18 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
 
      - Canon inkjets:
 
+       Canon MP140 series  (EXPERIMENTAL)(*1)
+       Canon PIXMA MP145   (EXPERIMENTAL)(*2)
+
+       Canon MP150 series  (EXPERIMENTAL)(*1)
+
+       Canon MP160 series  (EXPERIMENTAL)(*1)
+
+       Canon MP170 series  (EXPERIMENTAL)(*1)
+       Canon PIXUS MP170   (EXPERIMENTAL)(*2)
+
+       Canon MP180 series  (EXPERIMENTAL)(*1)
+
        Canon MP190 series  (EXPERIMENTAL)(*1)
        Canon PIXMA MP198   (EXPERIMENTAL)(*2)
 
